fix: update api and regenerate client
